# fyp_control_and_path_planning_public

./: .gitignore  README.md  runAnalysisText.txt
public_fyp_repo/: algo10each.csv  algos4-5each.csv
public_fyp_repo/maps/: cf_room2_map.pgm  cf_room2_map.yaml  maze_map.pgm  maze_map.yaml
public_fyp_repo/scripts/: generate_maze.py  show_map_coords.py
public_fyp_repo/src/crazyflie_ros2_multiranger/: README.md
public_fyp_repo/src/crazyflie_ros2_multiranger/crazyflie_ros2_multiranger_bringup/: CMakeLists.txt  package.xml
public_fyp_repo/src/crazyflie_ros2_multiranger/crazyflie_ros2_multiranger_bringup/config/: amcl_localization_sim.yaml  localization_sim.rviz  nav_to_pose_astar.xml  navigation_sim.yaml  slam_mapping_sim.rviz  slam_params.yaml  slam_params_localization_sim.yaml  slam_params_sim.yaml
public_fyp_repo/src/crazyflie_ros2_multiranger/crazyflie_ros2_multiranger_bringup/launch/: exploration_simulation_standalone.launch.py  localization_simulation.launch.py  localization_slam_toolbox_simulation.launch.py  navigation_simulation.launch.py  navigation_simulation_standalone.launch.py  navigation_with_slam_simulation.launch.py  navigation_with_slam_standalone.launch.py  simple_mapper_real.launch.py  simple_mapper_simulation.launch.py  slamtb_mapper_real.launch.py  slamtb_mapper_simulation.launch.py
public_fyp_repo/src/crazyflie_ros2_multiranger/crazyflie_ros2_multiranger_bringup/scripts/: compare_reports.py  compare_reports_gui.py  follow_waypoints.py  navigate_to_pose.py  planners.py  send_initialpose.py  slam_toolbox_load_map.py
(+8 files in other folders)
